# ml_prediction_forecasting

./: Makefile  README.md  pyproject.toml  setup.py
app/: main.py  requirements.txt
app/src/: encoders_dict.joblib
docs/: Makefile  conf.py  index.rst  make.bat
models/predictive/: encoders_dict.joblib  xgb_model_sample.joblib
notebooks/: Notebook1.ipynb
notebooks/forecasting/: aggregated_data.csv  holidays_data.csv  kotak_sahil_24707592_forecasting_prophet.ipynb  prophet_model_with_events.joblib  prophet_ready_data.csv
notebooks/predictive/: feature_order.joblib  kotak_sahil_24707592_predictive_xgboost.ipynb  kotak_sahil_xgboost.ipynb  recent_data.parquet  weekly_sell_price.parquet
src/data/: export.py
src/features/: build_features.py  label_encode.py  prophet_pipeline.py
src/models/: train_model.py
