[tool.poetry]
name = "ml-pred-forecasting"
version = "1.0"
description = "Retail Sales Prediction and Forecasting"
authors = ["sahilkotak <40324523+sahilkotak@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_pred_forecasting"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.6"
scikit-learn = "^1.3.1"
pandas = "2.0.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
gdown = "^4.7.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
